# py-quiz

./: README.md  pyproject.toml  quiz.py  setup.py
pyquizjp/: __init__.py  __version__.py  quiz.py
